fix aurelia impl

--- a/app/todo-list.html
+++ b/app/todo-list.html
@@ -2,6 +2,7 @@
     <require from="./todo-list-item"></require>
     <form submit.trigger="submit()">
         <input value.bind="newItemName" required placeholder="Add a new item">
+        <button>Add</button>
     </form>
     <todo-list-item repeat.for="item of items" title.bind="item.title" completed.bind="item.completed">
     </todo-list-item>
