--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
 <template>
     <require from="./todo-list"></require>
-    <todo-list items.bind=""items"></todo-list>
+    <todo-list items.bind="items"></todo-list>
 </template>
