--- a/app/todo-list-item.html
+++ b/app/todo-list-item.html
@@ -1,3 +1,3 @@
 <div [class.completed]="item.completed">
-    <input type="checkbox" [(ngModel)]="item.completed"> {{item.title}}
+    <input type="checkbox" [ngModel]="item.completed" (click)="onClick()"> {{item.title}}
 </div>
