--- a/app/todo-list.html
+++ b/app/todo-list.html
@@ -2,4 +2,4 @@
     <input [(ngModel)]="newItemName" />
     <button>Add</button>
 </form>
-<todo-list-item *ngFor="let item of items" [item]="item"></todo-list-item>
+<todo-list-item *ngFor="let item of todoItems" [item]="item"></todo-list-item>
