--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self';
+                   script-src 'self' 'unsafe-inline' 'unsafe-eval';
+                   connect-src 'self' http://localhost:1337;
+                   style-src 'self' 'unsafe-inline'">
     <title>Ex. 1.3: Polymer</title>
     <link rel="import" href="todo-list.html">
 </head>
@@ -12,12 +17,6 @@
         var app = document.querySelector('#app');
         app.addEventListener('dom-change', function () {
             document.querySelector('body').removeAttribute('unresolved');
-            var todoList = document.querySelector('#todoList');
-            todoList.items = [
-                {title: 'Finish Polymer Demo', completed: false},
-                {title: 'Climb the Kilimanjaro', completed: false},
-                {title: 'Make a TODO-list', completed: true}
-            ];
         });
     })(document);
 </script>
