--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <!-- 2. Configure SystemJS -->
-    <script>
-        System.config({
-            packages: {
-                dist: {
-                    format: 'register',
-                    defaultExtension: 'js'
-                }
-            }
-        });
-        System.import('dist/main')
-                .then(null, console.error.bind(console));
-    </script>
+    <script src="systemJsConfig.js"></script>
 
     <title>Ex. 1.1: Angular2</title>
 </head>
